Details
- 
    Bug 
- 
    Resolution: Fixed
- 
    Major 
- 
    None
Description
Some Shell32 classes should be aggregatable. Because they are not, the Taskbar classes can not inherit the behaviour of the menu toolbar, which means it can't customize the existing menu to act like the taskbar.
For this to happen, our ATL headers need to support COM aggregation.
Attachments
Issue Links
- is blocked by
- 
                    CORE-7953 Ros ATL headers are missing aggregation support -         
- Resolved
 
-